# mock-ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  Makefile  README.md  fly.toml  pyproject.toml  scripts.py  test.Dockerfile
.github/workflows/: actions.yml  fly-deploy.yml  release.yml  tests.yml
data/: purpose.md
demos/: start_server.tape  use_server.py  use_server.tape
examples/: openai_tutorial.ipynb  responses.json
fauxai/: __init__.py  cli.py
fauxai/anthropic/: __init__.py
fauxai/clients/: __init__.py  mistralai.py  openai.py
fauxai/cohere/: __init__.py
fauxai/server/: __init__.py  main.py  responses.py
mock_ai/: __init__.py  bottled_responses.py  cli.py  server.py
mock_ai/clients/: __init__.py  cohere.py  mistralai.py  openai.py
mock_ai/server/: __init__.py  main.py  responses.py
mock_ai/types/openai/: completions.py  messages.py  stream.py
mockai/: __init__.py  cli.py  constants.py  dependencies.py  gui.py  logging_conf.yaml  main.py  models.py  schemas.py  server.py
mockai-gui/: package.json  pnpm-lock.yaml  vite.config.js
mockai-gui/src/: App.svelte
mockai-gui/src/lib/: ResponseForm.svelte
mockai/anthropic/: __init__.py  models.py  router.py  services.py
mockai/clients/: __init__.py  cohere.py  mistralai.py  openai.py
mockai/gui/: index.html  router.py
mockai/gui/assets/: index-B6NCQ8ps.css  index-CLW7Tyao.js
mockai/models/: common.py  json_file.py
mockai/models/api/: anthropic.py  openai.py
mockai/models/json_file/: models.py
mockai/openai/: __init__.py  models.py  router.py  services.py
mockai/server/: __init__.py  main.py  models.py  responses.py
scripts/: docker_start.py
tests/: conftest.py  responses.json  test.Dockerfile  test_anthropic.py  test_cohere.py  test_mistralai.py  test_openai.py  test_responses.json
tests/clients/: conftest.py  test_anthropic.py  test_cohere.py  test_mistralai.py  test_openai.py
