[tool.poetry]
name = "ai-mock"
version = "0.2.5"
description = "Mock clients for your favorite LLM APIs"
authors = ["Anibal Angulo <ajcardoza2000@gmail.com>"]
packages = [{ "include" = "mockai" }]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^24.1.0"
fastapi = { extras = ["standard"], version = "^0.115.2" }
openai = { version = "^1.51.2", optional = true }
anthropic = { version = "^0.30.0", optional = true }
mistralai = { version = "^0.4.1", optional = true }
cohere = { version = "^5.8.0", optional = true }

[tool.poetry.extras]
openai = ["openai"]
anthropic = ["anthropic"]
mistralai = ["mistralai"]
cohere = ["cohere"]
all = ["openai", "anthropic", "mistralai", "cohere"]

[tool.poetry.scripts]
server = "mockai.cli:cli"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pytest = "^8.3.3"
pytest-asyncio = "^0.23.7"
ipykernel = "^6.29.5"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
