[tool.poetry]
name = "ai-mock"
version = "0.2.7"
description = "Mock clients for your favorite LLM APIs"
authors = ["Anibal Angulo <ajcardoza2000@gmail.com>"]
packages = [{ "include" = "mockai" }]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^24.1.0"
fastapi = { extras = ["standard"], version = "^0.115.6" }
starlette-compress="^1.4.0"
orjson = "^3.10.14"
openai = { version = "^1.59.6", optional = true }
anthropic = { version = "^0.42.0", optional = true }
mistralai = { version = "^1.2.6", optional = true }
cohere = { version = "^5.13.6", optional = true }

[tool.poetry.extras]
openai = ["openai"]
anthropic = ["anthropic"]
mistralai = ["mistralai"]
cohere = ["cohere"]
all = ["openai", "anthropic", "mistralai", "cohere"]

[tool.poetry.scripts]
ai-mock = "mockai.cli:cli"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pytest = "^8.3.4"
pytest-sugar= "^1.0.0"
pytest-asyncio = "^0.25.2"
ipykernel = "^6.29.5"
httpx={ extras = ["brotli","http2","zstd"], version = ">0.20.0" } #to test custom anthropic client
anyio = "^4.8.0"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = [
    "I",
    'PERF'
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
